Add AlinaNova21.AMM_SylvaWye as conflict for 2024.6+

--- a/bulletins/railroader-2024.6.yml
+++ b/bulletins/railroader-2024.6.yml
@@ -12,3 +12,5 @@
       notAfter: 1.0.0.0
     - id: "PrinceOfPluto.SylvaJctWye"
       notAfter: 1.0.0.0
+    - id: "AlinaNova21.AMM_SylvaWye"
+      notAfter: 1.1.1.0
